--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -176,6 +176,28 @@ dd {
     margin: 0;
 }
 
+ul {
+    padding-left: 1rem;
+    margin: 0;
+    list-style-type: none;
+}
+
+ul li {
+    display: flex;
+    align-items: start;
+}
+
+ul li::before {
+    content: '';
+    flex-shrink: 0;
+    width: .5rem;
+    height: .5rem;
+    border-radius: 50%;
+    display: block;
+    background-color: var(--black);
+    margin-right: .7rem;
+    margin-top: 1rem;
+}
 
 .is-hidden {
     display: none !important
@@ -1777,5 +1799,69 @@ textarea {
 
     .w-60 {
         width: 100%;
+    }
+}
+
+/* Benefits */
+.benefits {
+    padding: 5rem 0 11.2rem;
+    display: flex;
+    align-items: start;
+    gap: 3.6rem;
+}
+
+.benefits__img {
+    border-radius: 1.2rem;
+    overflow: hidden;
+    width: 52.5rem;
+    flex-shrink: 0;
+}
+
+.benefits__img img {
+    width: 100%;
+}
+
+.benefits__content {
+    padding-top: 1.9rem;
+}
+
+.benefits__title {
+    margin-bottom: 1.5rem;
+}
+
+.benefits__subtitle {
+    margin-bottom: 2.9rem;
+}
+
+.benefits__content {
+    font-size: 1.8rem;
+}
+
+.benefits__content li:not(:last-child) {
+    margin-bottom: 1.5rem;
+}
+
+@media (max-width: 640px) {
+    .benefits {
+        padding: 3.7rem 0 7.2rem;
+        flex-direction: column-reverse;
+        gap: 3.2rem;
+    }
+
+    .benefits__img {
+        width: 100%;
+        max-height: 19.5rem;
+    }
+
+    .benefits__content {
+        padding-top: 0;
+    }
+
+    .benefits__title {
+        margin-bottom: 2rem;
+    }
+
+    .benefits__content {
+        font-size: 1.2rem;
     }
 }
