--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1546,6 +1546,7 @@ textarea {
 .section__title {
     max-width: 56rem;
     text-wrap: balance;
+    font-size: 4.8rem;
 }
 
 .section__subtitle {
@@ -1573,6 +1574,7 @@ textarea {
     .section__title {
         max-width: 100%;
         text-wrap: balance;
+        font-size: 3.2rem;
     }
 
     .section__subtitle {
@@ -1863,5 +1865,77 @@ textarea {
 
     .benefits__content {
         font-size: 1.2rem;
+    }
+}
+
+/* Group  */
+.group {
+    padding: 5.8rem 0 10.9rem;
+    display: flex;
+    align-items: start;
+    gap: 1.7rem;
+}
+
+.group__img {
+    width: 56rem;
+    flex-shrink: 0;
+}
+
+.group__img img {
+    width: 100%;
+}
+
+.group__content {
+    padding-top: 3.5rem;
+}
+
+.group__text {
+    margin-top: 1.5rem;
+    margin-bottom: 4rem;
+    font-size: 1.8rem;
+    text-wrap: balance;
+}
+
+.discounts.reverse {
+    flex-direction: row-reverse;
+    align-items: start;
+}
+
+.discounts.reverse .discounts__content {
+    padding-top: 3.5rem;
+}
+
+@media (max-width: 640px) {
+    .group {
+        padding: 2.5rem 0 5rem;
+        flex-direction: column;
+        gap: 2.6rem;
+    }
+
+    .group__img {
+        width: 100%;
+    }
+
+    .group__content {
+        padding-top: 3.5rem;
+    }
+
+    .group__content button {
+        padding: 1.5rem 6.2rem;
+    }
+
+    .group__text {
+        margin-top: 1.5rem;
+        margin-bottom: 3.2rem;
+        font-size: 1.2rem;
+    }
+
+    .discounts.reverse {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .discounts.reverse .discounts__content {
+        padding-top: 0;
     }
 }
